# lib/db/src/schema/index.ts
@@ -2,3 +2,4 @@ export * from "./campaigns";
 export * from "./prospects";
 export * from "./emails";
 export * from "./activity";
+export * from "./questionnaire";
